--- a/src/scss/layout/_navigation.scss
+++ b/src/scss/layout/_navigation.scss
@@ -11,7 +11,4 @@
     flex-direction: row;
     justify-content: flex-end;
   }
-  .navbar-toggler-icon {
-    color: white;
-  }
 }
